--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,8 @@ cryptography==36.0.1
 django-environ==0.8.1
 xhtml2pdf==0.2.5
 drf-yasg==1.21.3
-django-compression-middleware
+django-environ==0.8.1
+django-cors-headers==3.4.0
+python-memcached==1.59
+Pillow==9.3.0
+django-compression-middleware==0.5.0
