--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 Django==2.0.5
 django-embed-video==1.0.0
 django-braces==1.13.0
-numpy==1.16.1
+scipy==1.9.3
 sklearn==0.0
+scikit-learn==1.2.0
 requests==2.23.0
 djangorestframework==3.11.0
 cryptography==36.0.1
 django-environ==0.8.1
 xhtml2pdf==0.2.5
-drf-yasg==1.21.3
+#drf-yasg==1.21.3
 django-environ==0.8.1
 django-cors-headers==3.4.0
 python-memcached==1.59
 Pillow==9.3.0
 django-compression-middleware==0.5.0
+mysqlclient==2.1.1
+reportlab==3.6.3
